--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-eventlet==0.40.3
 Flask==3.1.2
 flask_cors==6.0.1
-flask_sock==0.7.0
-Requests==2.32.5
+qdrant_client==1.15.1
+sentence_transformers==5.1.0
 gunicorn
-pymongo==4.6.3
