--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Flask==3.1.2
-flask_cors==6.0.1
-qdrant_client==1.15.1
-sentence_transformers==5.1.0
-gunicorn
+flask-cors==6.0.1
+gunicorn==23.0.0
+qdrant-client==1.15.1
+sentence-transformers==2.2.2
+torch==2.3.1+cpu --index-url https://download.pytorch.org/whl/cpu
