--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,4 @@ flask-cors==6.0.1
 gunicorn==23.0.0
 qdrant-client==1.15.1
 sentence-transformers==2.2.2
-torch==2.3.1+cpu  --extra-index-url https://download.pytorch.org/whl/cpu
+torch==2.5.0
