--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Flask==3.1.2
-flask-cors==6.0.1
+flask-cors==4.0.1
 gunicorn==23.0.0
 qdrant-client==1.15.1
 sentence-transformers==2.2.2
-torch==2.5.0
+torch==1.12.1
+transformers==4.20.1
