--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Flask==3.1.2
 flask-cors==4.0.1
 gunicorn==23.0.0
 qdrant-client==1.15.1
-sentence-transformers==2.2.2
 torch==2.5.0
+sentence-transformers==2.7.0
 transformers==4.44.2
+tokenizers==0.19.1
